# test_libtorch

./: README.md
src/: CMakeLists.txt  main.cpp  main_gpu.cpp  main_gpu_base.cpp  run.sh
